<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- League Detail -->
    <item name="tv_league_detail_formed_year" type="id" />
    <item name="tv_league_detail_country" type="id" />
    <item name="tv_desc_title" type="id" />
    <item name="tv_league_detail_desc" type="id" />
    <item name="progress_bar" type="id" />
    <item name="toolbar_league_detail" type="id" />
    <item name="container_layout_league_detail" type="id" />
    <item name="league_detail_layout" type="id" />
    <item name="iv_league_detail_trophy" type="id" />

    <!-- Favorite match fragment -->
    <item name="favorite_match_parent_layout" type="id" />
    <item name="rv_favorite_match" type="id" />

    <!-- Favorite team fragment -->
    <item name="favorite_team_parent_layout" type="id" />
    <item name="rv_favorite_team" type="id" />

    <!-- League List -->
    <item name="rv_league_list" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />

    <!-- League Teams -->
    <item name="league_teams_parent_layout" type="id" />
    <item name="rv_league_teams" type="id" />

    <!-- League Table -->
    <item name="league_table_parent_layout" type="id" />
    <item name="rv_league_table" type="id" />
    <item name="league_table_spinner" type="id" />
    <item name="league_table_layout" type="id" />

    <!-- League Matches -->
    <item name="league_match_parent_layout" type="id" />
    <item name="league_match_spinner" type="id" />
    <item name="rv_league_match" type="id" />

    <!-- Match fragment from Team -->
    <item name="team_matches_parent_layout" type="id" />

    <!-- Team Detail -->
    <item name="container_layout_team_detail" type="id" />
    <item name="team_detail_layout" type="id" />
    <item name="tv_team_jersey" type="id" />
    <item name="tv_league_title" type="id" />
    <item name="tv_team_detail_league" type="id" />
    <item name="tv_stadium_title" type="id" />
    <item name="tv_team_stadium_name" type="id" />
    <item name="tv_team_stadium_location" type="id" />
    <item name="tv_team_stadium_capacity" type="id" />
    <item name="tv_stadium_description_title" type="id" />
    <item name="tv_stadium_description" type="id" />
    <item name="tv_team_description_title" type="id" />
    <item name="tv_team_description" type="id" />

    <!-- Team Players -->
    <item name="team_players_parent_layout" type="id" />
    <item name="rv_team_players" type="id" />

    <!-- Team Matches -->
    <item name="team_match_spinner" type="id" />
    <item name="rv_team_match" type="id" />

    <!-- Favorite team item -->
    <item name="favorite_team_badge" type="id" />
    <item name="favorite_team_name" type="id" />


</resources>