...
    </array>

    <!-- League Detail -->
    <string name="league_detail">League Detail</string>

    <!-- League Detail Content Description -->
    <string name="league_detail_logo_collapsed">League Detail Logo Collapsed</string>
    <string name="league_detail_logo_expanded">League Detail Logo Expanded</string>
    <string name="league_detail_logo_collapsing">League Detail Logo Collapsing</string>

    <!-- Data error -->
    <string name="no_data_to_show">No data to show</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- Info -->
...
    <string name="team_info">Team Info</string>

    <!-- Team Detail -->
    <string name="team_detail">Team Detail</string>

    <!-- Team Detail Content Description -->
    <string name="team_detail_logo_collapsed">Team Detail Logo Collapsed</string>
    <string name="team_detail_logo_expanded">Team Detail Logo Expanded</string>
    <string name="team_detail_logo_collapsing">Team Detail Logo Collapsing</string>

    <!-- Team in Player Detail Section -->
    <string name="team_date_signed">Team Date Signed</string>
    <string name="team_number">Team Number</string>
    <string name="team_wages">Team Wages</string>
    <string name="team_transfer_fee">Team Transfer Fee</string>
...

    <!-- Description in Player Detail Section -->
    <string name="player_description_section">Description</string>
    <string name="player_description">Player Description</string>

    <!-- Player Detail Content Description -->
    <string name="player_fanart_expanded">Player Fanart Expanded</string>
    <string name="player_fanart_collapsed">Player Fanart Collapsed</string>
    <string name="player_fanart_collapsing">Player Fanart Collapsing</string>


    <!-- Snackbar Action -->
    <string name="undo">UNDO</string>


...
